Fix path alias config and module folder casing

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,7 @@
       "dom"
     ],
     "paths": {
-      "@modules/*": ["app/modules"]
+      "@modules/*": ["app/modules/*"]
     }
   },
   "angularCompilerOptions": {
