Update tsconfig to not require property initialization

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,8 @@
     ],
     "paths": {
       "@modules/*": ["app/modules/*"]
-    }
+    },
+    "strictPropertyInitialization": false
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
